--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,19 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // CameraX core library using the camera2 implementation
+    def camerax_version = "1.0.2"
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:1.1.0-beta01"
+
+    // ML Kit Text Recognition
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
+
+    // ML Kit Text Recognition V2
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta3'
 }
