Add two activities to go from MainActivity
- Each activity shows respective title in the toolbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTextRecognitionApp">
         <activity
+            android:name=".StreamImageProcessActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SingleImageProcessActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
