--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,12 @@ dependencies {
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.0.2"
     // The following line is optional, as the core library is included indirectly by camera-camera2
-    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
     // If you want to additionally use the CameraX Lifecycle library
-    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
     // If you want to additionally use the CameraX View class
-    implementation "androidx.camera:camera-view:1.1.0-beta02"
+    implementation "androidx.camera:camera-view:1.0.0-alpha32"
 
     // ML Kit Text Recognition
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
